cambios para la maquina virtual

--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -71,7 +71,7 @@
   </button>
 </a>
 <br>
-<a target="_blank" href="http://localhost/wikindx5.3.1/index.php?action=list_LISTRESOURCES_CORE&method=processGeneral&list_Order=title">
+<a target="_blank" href="http://35.198.47.176/wikindx/">
   <button type="button" class="btn btn-primary btn-lg btn-block">
     Ver en WIKINDX
   </button>
