--- a/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
@@ -113,7 +113,7 @@
 
     <div class="row" id="articulos">
       <input type="text" class="form-control my-2" name="q" placeholder="Buscar en DOAJ" id="homepage-search-input" required>
-      <Select id = "DropDown1">
+      <Select class="custom-select" id = "DropDown1">
 
         <Option value =""> Todo </Option>
         <Option value = "bibjson.title:"> Título </Option>
