--- a/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
@@ -102,7 +102,7 @@ xhtml1/DTD/xhtml1-transitional.dtd">
 <input type="text" class="form-control"  name="q" placeholder="Buscar en Arxiv" id="homepage-search-input">
 
 </i>
-<Select id = "DropDown1">
+<Select class="custom-select" id = "DropDown1">
 
   <Option value ="all:"> Todo </Option>
   <Option value = "ti:"> Título </Option>
