para ir a la biblioteca de wikindx

--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -71,7 +71,7 @@
   </button>
 </a>
 <br>
-<a target="_blank" href="http://35.198.47.176/wikindx/">
+<a target="_blank" href="http://35.198.47.176/wikindx/index.php?action=list_LISTRESOURCES_CORE&method=processGeneral&list_Order=title">
   <button type="button" class="btn btn-primary btn-lg btn-block">
     Ver en WIKINDX
   </button>
