cambiando ip cama que coja los metodos de subir artículo

--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -65,7 +65,7 @@
 
 
 
-<a target="_blank" href="/mibiblioteca">
+<a href="/mibiblioteca">
   <button type="button" class="btn btn-primary btn-lg btn-block">
     Ver artículos añadidos por mi
   </button>
