--- a/07-Backend-MVC/CarritoCompras/views/VerMisArticulos.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/VerMisArticulos.ejs
@@ -316,7 +316,7 @@
 
 <hr>
 <div class="container ">
-  <form action="http://localhost:1337/mifile/upload" enctype="multipart/form-data" method="post">
+  <form action="http://http://35.198.47.176:8081/mifile/upload" enctype="multipart/form-data" method="post">
     <input hidden
            class="form-control"
            type="text"
