--- a/07-Backend-MVC/CarritoCompras/views/editarArticulo.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/editarArticulo.ejs
@@ -311,7 +311,7 @@
 <hr>
 
 <div class="container">
-  <form action="http:35.198.47.176:8081/file/upload" enctype="multipart/form-data" method="post">
+  <form action="file/upload" enctype="multipart/form-data" method="post">
     <input hidden
            class="form-control"
            type="text"
