link al articulo en la biblioteca

--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -38,7 +38,8 @@
   <div class="card" style="width: 80rem;">
     <div class="card-block">
 
-      <h5 class="card-title"><b><a href="<%=articulos[i].link%>"><%=articulos[i].title%></a></b></h5>
+      
+      <h5 class="card-title"><b><a target="_blank" href="<%=articulos[i].link%>"><%=articulos[i].title%></a></b></h5>
       <p class="card-text"><h6><%=articulos[i].authores%>, "<%=articulos[i].title%>", <i><%=articulos[i].journal%></i>, vol.<%=articulos[i].volume%>, no.<%=articulos[i].number%>, pp.<%=articulos[i].pages%>, <%=articulos[i].year%></h6></p>
     </div>
 
